# PokerBot

./: .bazelrc  .gitignore  MODULE.bazel  TEST_REFACTOR.md  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
docs/: deferred_features.md  equity_private_abstraction.md
models/: BUILD.bazel  deep_cfr_compact_texture_h36_history_small_100bb_i300.pnn
scripts/: concat_sources.py  count_loc.py
src/: App.svelte  BUILD.bazel  best_response.cc  best_response.h  bet_abstraction.cc  bet_abstraction.h  betting_abstraction.cc  betting_abstraction.h  betting_abstraction_test.cc  build_flags.h  card.h  card_abstraction.cc  card_abstraction.h  card_abstraction_test.cc  card_canonicalization.cc  card_canonicalization.h  card_utils.cc  card_utils.h  card_utils_test.cc  cards_test.cc  cfr_benchmark.cc  cfr_board_bucket_test.cc  cfr_coarse_test.cc  cfr_equivalence_test.cc  cfr_public_bucket_test.cc  cfr_solver.cc  cfr_solver.h  cfr_solver_proto_adapter.cc  cfr_solver_proto_adapter.h  cfr_solver_test.cc  cfr_state.h  cfr_test.cc  cfr_traversal.h  cfr_traversal_guard_test.cc  coarse_chance_transitions.h  combo.cc  combo.h  combo_test.cc  continuation_value.cc  continuation_value.h  (+82 more)
src/simulator/: BUILD.bazel  README.md  simulator.cc  simulator.h  simulator_test.cc
tests/: BUILD.bazel  board_runout_test.cc  card_utils_test.cc  cfr_solver_test.cc  compiled_lifecycle_test.cc  compiled_solver_test_support.h  deep_cfr_test.cc  experimental_policy_encoder_test.cc  frozen_training_parity_test.cc  game_rules_test.cc  game_state_test.cc  graph_identity_test.cc  identity_test_support.h  neural_policy_test.cc  perfect_recall_test.cc  perfect_recall_validation_test.cc  poker_rules_test.cc  policy_codec_test.cc  private_observation_test.cc  public_observation_test.cc  rules_test_support.h  storage_ownership_test.cc  strict_abstraction_test.cc  training_range_test.cc  unsupported_abstraction_test.cc
tools/: BUILD.bazel  build_equity_abstraction.cc  cfr_benchmark.cc  deep_cfr_smoke.cc  deep_cfr_train.cc  generate_hand_evaluator.cc  hand_evaluator_table_builder.cc  hand_evaluator_table_builder.h
web/: BUILD.bazel  policy_decoder_wasm.cc  policy_decoder_wasm.h  policy_decoder_wasm_test.cc  vercel-build.sh
web/app/: .gitignore  index.html  package.json  vite.config.ts
web/app/models/: pokerbot.policy.br
web/app/public/: poker-table-license.txt
web/app/public/cards/: License.txt
web/app/src/: App.svelte  poker.test.ts  poker.ts  policy.ts  policy_decoder.d.ts  policy_decoder.js  stats.ts
