module(
    name = "poker_solver",
    version = "0.1.0",
)

bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "doctest", version = "2.5.2")
bazel_dep(name = "emsdk", version = "6.0.2")
bazel_dep(name = "rules_cc", version = "0.2.16")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
