load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

CORE_COPTS = [
    "-fno-exceptions",
    "-Werror=return-type",
    "-Wswitch-enum",
    "-Wconversion",
    "-Wsign-conversion",
]

cc_library(
    name = "poker",
    srcs = [
        "hand_evaluator.cc",
        "poker.cc",
    ],
    hdrs = [
        "hand_evaluator.h",
        "poker.h",
    ],
    copts = CORE_COPTS,
    deps = [
        "@abseil-cpp//absl/container:inlined_vector",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
        "//generated:hand_evaluator_tables",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bet_abstraction",
    srcs = ["bet_abstraction.cc"],
    hdrs = ["bet_abstraction.h"],
    copts = CORE_COPTS,
    deps = [
        ":poker",
        "@abseil-cpp//absl/container:inlined_vector",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "card_canonicalization",
    srcs = ["card_canonicalization.cc"],
    hdrs = ["card_canonicalization.h"],
    copts = CORE_COPTS,
    deps = [":poker"],
    visibility = ["//visibility:public"],
)

SOLVER_SRCS = [
    "card_abstraction.cc",
    "evaluation.cc",
    "fingerprint.cc",
    "solver.cc",
]
SOLVER_HDRS = [
    "card_abstraction.h",
    "evaluation.h",
    "fingerprint.h",
    "solver.h",
]
SOLVER_DEPS = [
    ":bet_abstraction",
    ":card_canonicalization",
    ":poker",
    "@abseil-cpp//absl/container:flat_hash_map",
    "@abseil-cpp//absl/container:inlined_vector",
    "@abseil-cpp//absl/log:log",
    "@abseil-cpp//absl/status:status",
    "@abseil-cpp//absl/status:statusor",
    "@abseil-cpp//absl/types:span",
]

cc_library(
    name = "solver",
    srcs = SOLVER_SRCS,
    hdrs = SOLVER_HDRS,
    copts = CORE_COPTS,
    deps = SOLVER_DEPS,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "poker_solver",
    srcs = ["main.cc"],
    deps = [
        ":solver",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
