load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

CORE_COPTS = [
    "-fno-exceptions",
    "-Werror=return-type",
    "-Wswitch-enum",
    "-Wconversion",
    "-Wsign-conversion",
]

cc_library(
    name = "poker",
    srcs = [
        "hand_evaluator.cc",
        "poker.cc",
    ],
    hdrs = [
        "hand_evaluator.h",
        "poker.h",
    ],
    copts = CORE_COPTS,
    deps = [
        "@abseil-cpp//absl/container:inlined_vector",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bet_abstraction",
    srcs = ["bet_abstraction.cc"],
    hdrs = ["bet_abstraction.h"],
    copts = CORE_COPTS,
    deps = [
        ":poker",
        "@abseil-cpp//absl/container:inlined_vector",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "card_canonicalization",
    srcs = ["card_canonicalization.cc"],
    hdrs = ["card_canonicalization.h"],
    copts = CORE_COPTS,
    deps = [":poker"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "solver",
    srcs = [
        "card_abstraction.cc",
        "solver.cc",
    ],
    hdrs = [
        "card_abstraction.h",
        "cfr_traversal.h",
        "solver.h",
    ],
    copts = CORE_COPTS,
    deps = [
        ":bet_abstraction",
        ":card_canonicalization",
        ":poker",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "evaluation",
    srcs = ["evaluation.cc"],
    hdrs = ["evaluation.h"],
    copts = CORE_COPTS,
    deps = [
        ":solver",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "policy_codec",
    srcs = ["policy_codec.cc"],
    hdrs = ["policy_codec.h"],
    copts = CORE_COPTS,
    deps = [
        ":bet_abstraction",
        ":solver",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "neural_policy",
    srcs = ["neural_policy.cc"],
    hdrs = ["neural_policy.h"],
    copts = [
        "-DACCELERATE_NEW_LAPACK",
        "-Werror=return-type",
        "-Wswitch-enum",
        "-Wconversion",
        "-Wsign-conversion",
    ],
    deps = [
        ":solver",
        "@libtorch_macos_arm64//:torch",
    ],
    linkopts = ["-framework Accelerate"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "deep_cfr",
    srcs = ["deep_cfr.cc"],
    hdrs = ["deep_cfr.h"],
    copts = [
        "-DACCELERATE_NEW_LAPACK",
        "-Werror=return-type",
        "-Wswitch-enum",
        "-Wconversion",
        "-Wsign-conversion",
    ],
    deps = [
        ":evaluation",
        ":neural_policy",
        ":solver",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "poker_solver",
    srcs = ["main.cc"],
    deps = [
        ":deep_cfr",
        ":neural_policy",
        ":policy_codec",
        ":solver",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
