load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "game_rules_test",
    srcs = [
        "board_runout_test.cc",
        "game_rules_test.cc",
        "game_state_test.cc",
        "rules_test_support.h",
    ],
    deps = [
        "//src:card_utils",
        "//src:combo",
        "//src:game_rules",
        "//src:game_state",
        "//src:hand_evaluator",
        "//src:poker_types",
        "@doctest//:main",
    ],
)

cc_test(
    name = "graph_identity_test",
    srcs = [
        "graph_identity_test.cc",
        "identity_test_support.h",
        "perfect_recall_test.cc",
        "perfect_recall_validation_test.cc",
    ],
    deps = [
        "//src:betting_abstraction",
        "//src:card_abstraction",
        "//src:cfr_solver",
        "//src:combo",
        "//src:game_rules",
        "//src:strategy_store",
        "//src:strategy_tables",
        "@doctest//:main",
        "@rapidcheck//:rapidcheck",
    ],
)

cc_test(
    name = "compiled_solver_architecture_test",
    srcs = [
        "compiled_lifecycle_test.cc",
        "compiled_solver_test_support.h",
        "frozen_training_parity_test.cc",
        "storage_ownership_test.cc",
    ],
    deps = [
        "//src:cfr_solver",
        "//src:combo",
        "//src:game_rules",
        "//src:hand_range",
        "@doctest//:main",
    ],
)

cc_test(
    name = "observation_identity_coarse_test",
    srcs = [
        "identity_test_support.h",
        "perfect_recall_validation_test.cc",
        "private_observation_test.cc",
        "public_observation_test.cc",
    ],
    copts = [
        "-DPOKER_COARSE_PRIVATE_BUCKETS=1",
        "-DPOKER_COARSE_PUBLIC_BUCKETS=1",
    ],
    deps = [
        "//src:betting_abstraction",
        "//src:card_abstraction",
        "//src:cfr_solver_coarse_buckets",
        "//src:combo",
        "//src:game_rules",
        "//src:strategy_store",
        "//src:strategy_tables",
        "@doctest//:main",
        "@rapidcheck//:rapidcheck",
    ],
)

cc_test(
    name = "perfect_recall_coarse_private_test",
    srcs = [
        "identity_test_support.h",
        "perfect_recall_validation_test.cc",
    ],
    copts = ["-DPOKER_COARSE_PRIVATE_BUCKETS=1"],
    deps = [
        "//src:betting_abstraction",
        "//src:card_abstraction",
        "//src:cfr_solver_coarse_private",
        "//src:combo",
        "//src:game_rules",
        "//src:strategy_tables",
        "@doctest//:main",
        "@rapidcheck//:rapidcheck",
    ],
)

cc_test(
    name = "perfect_recall_coarse_public_test",
    srcs = [
        "identity_test_support.h",
        "perfect_recall_validation_test.cc",
    ],
    copts = ["-DPOKER_COARSE_PUBLIC_BUCKETS=1"],
    deps = [
        "//src:betting_abstraction",
        "//src:card_abstraction",
        "//src:cfr_solver_coarse_public",
        "//src:combo",
        "//src:game_rules",
        "//src:strategy_tables",
        "@doctest//:main",
        "@rapidcheck//:rapidcheck",
    ],
)
