load("@rules_cc//cc:defs.bzl", "cc_test")

DOCTEST_DEPS = ["@doctest//:main"]

cc_test(
    name = "game_rules_test",
    srcs = [
        "board_runout_test.cc",
        "game_rules_test.cc",
        "game_state_test.cc",
        "rules_test_support.h",
    ],
    deps = [
        "//src:bet_abstraction",
        "//src:poker",
        "@doctest//:main",
    ],
)

cc_test(
    name = "poker_test",
    srcs = [
        "card_utils_test.cc",
        "cfr_solver_test.cc",
        "poker_rules_test.cc",
        "training_range_test.cc",
    ],
    deps = DOCTEST_DEPS + [
        "//src:bet_abstraction",
        "//src:solver",
        "//tools:hand_evaluator_table_builder",
    ],
)

cc_test(
    name = "strict_abstraction_coarse_private_test",
    srcs = ["strict_abstraction_test.cc"],
    copts = ["-DPOKER_COARSE_PRIVATE_BUCKETS=1"],
    deps = DOCTEST_DEPS + ["//src:solver_coarse_private"],
)

cc_test(
    name = "strict_abstraction_coarse_public_test",
    srcs = ["strict_abstraction_test.cc"],
    copts = ["-DPOKER_COARSE_PUBLIC_BUCKETS=1"],
    deps = DOCTEST_DEPS + ["//src:solver_coarse_public"],
)
