load("@rules_cc//cc:defs.bzl", "cc_test")

DOCTEST_DEPS = ["@doctest//:main"]

cc_test(
    name = "game_rules_test",
    srcs = [
        "board_runout_test.cc",
        "game_rules_test.cc",
        "game_state_test.cc",
        "rules_test_support.h",
    ],
    deps = [
        "//src:bet_abstraction",
        "//src:poker",
        "@doctest//:main",
    ],
)

cc_test(
    name = "poker_test",
    srcs = [
        "card_utils_test.cc",
        "cfr_solver_test.cc",
        "policy_codec_test.cc",
        "poker_rules_test.cc",
        "training_range_test.cc",
    ],
    deps = DOCTEST_DEPS + [
        "//src:bet_abstraction",
        "//src:evaluation",
        "//src:policy_codec",
        "//src:solver",
    ],
)

cc_test(
    name = "card_abstraction_modes_test",
    srcs = ["strict_abstraction_test.cc"],
    deps = DOCTEST_DEPS + ["//src:solver"],
)

cc_test(
    name = "deep_cfr_test",
    srcs = ["deep_cfr_test.cc"],
    deps = DOCTEST_DEPS + [
        "//src:deep_cfr",
        "//src:neural_policy",
    ],
)
