load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "cfr_benchmark",
    srcs = ["cfr_benchmark.cc"],
    deps = [
        "//src:solver",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_binary(
    name = "deep_cfr_smoke",
    srcs = ["deep_cfr_smoke.cc"],
    tags = ["manual"],
    deps = [
        "//src:solver",
        "@libtorch_macos_arm64//:torch",
    ],
)
